# calc

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: main.yml
src/: calc.cpp  calc.hpp  calc_cli.cpp  evaluator.cpp  evaluator.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
tests/: calc_tests.cpp  evaluator_tests.cpp  lexer_tests.cpp  parser_tests.cpp
